# nockchain

./: Cargo.toml  Makefile  PARALLEL_MINING_README.md
.cargo/: config.toml
crates/hoonc/: Cargo.toml
crates/kernels/src/: lib.rs  miner_batch.rs
crates/nockapp/src/kernel/: form.rs
crates/nockchain-libp2p-io/src/: nc.rs
crates/nockchain/src/: mining.rs  mining_pool.rs
crates/zkvm-jetpack/: Cargo.toml
crates/zkvm-jetpack/src/: domain_cache.rs  hot.rs  lib.rs
crates/zkvm-jetpack/src/hand/: convert.rs  structs.rs
crates/zkvm-jetpack/src/jets/: bp_jets.rs  bp_jets_parallel.rs  fp_jets.rs  mod.rs  proof_jets.rs  table_jets.rs
hoon/apps/dumbnet/: inner.hoon  miner-batch.hoon
hoon/apps/dumbnet/lib/: types.hoon
hoon/common/: pow-parallel.hoon
hoon/common/stark/: prover.hoon
hoon/common/table/prover/: compute.hoon
scripts/: benchmark_mining.sh  fakenet.sh  run_optimized_miner.sh  test_mining_diagnostics.sh  test_parallel_mining.sh  test_table_jet.sh
scripts/mds/phase1/: phase1_implmentation_sum.md  phase1_testing_guide.md
